syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc GetList(GetListRequest) returns (ListResponse);
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc UpdateProduct(CreateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(GetProductRequest) returns (DeleteProductResponse);
}

message GetProductRequest {
  string product_id = 1;
}

message ProductResponse {
  string product_id = 1;
  string name = 2;
  string description = 3;
  int32 price_buy = 4;
  int32 price_sell = 5;
  int32 supplier_id = 6;
  int32 weight = 7;
}

message GetListRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListResponse {
  repeated ProductResponse products = 1;
  int32 total_count = 2;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  int32 price_buy = 3;
  int32 price_sell = 4;
  int32 supplier_id = 5;
  int32 weight = 6;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
}